--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Deadline_Countdown</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Add every hard coded text here -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
