--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <resources>
-    <string name="app_name">Deadline_Countdown</string>
-    <!-- TODO: Add every hard coded text here -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Compte_à_Rebours</string>
+    <string name="hello_blank_fragment">Bonjour fragment vide</string>
+    <string name="set_a_timer">Définir un minuteur</string>
+    <string name="name_your_task">Nommez votre tâche...</string>
+    <string name="pick_a_color_for_it">Choisissez une couleur pour celle-ci...</string>
+    <string name="choose_a_format_for_the_countdown">Un format pour le compte à rebours...</string>
+    <string name="week">Sem</string>
+    <string name="day">Jour</string>
+    <string name="hour">Heure</string>
+    <string name="min">Min</string>
+    <string name="sec">Sec</string>
+    <string name="coming_soon">À venir...</string>
+    <string name="get_it_done_in_time">Terminez dans les temps!</string>
+    <string name="settings">Paramètres</string>
+    <string name="date">Date</string>
+    <string name="time">Heure</string>
+    <string name="description_optional">Description (optionnelle)</string>
+    <string name="save_this_task">Enregistrer</string>
+
+
 </resources>
