--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,41 @@
+<!--<resources>-->
+<!--    <string name="app_name">Compte_à_Rebours</string>-->
+<!--    <string name="hello_blank_fragment">Bonjour fragment vide</string>-->
+<!--    <string name="set_a_timer">Définir un minuteur</string>-->
+<!--    <string name="name_your_task">Nommez votre tâche...</string>-->
+<!--    <string name="pick_a_color_for_it">Choisissez une couleur pour celle-ci...</string>-->
+<!--    <string name="choose_a_format_for_the_countdown">Un format pour le compte à rebours...</string>-->
+<!--    <string name="week">Sem</string>-->
+<!--    <string name="day">Jour</string>-->
+<!--    <string name="hour">Heure</string>-->
+<!--    <string name="min">Min</string>-->
+<!--    <string name="sec">Sec</string>-->
+<!--    <string name="coming_soon">À venir...</string>-->
+<!--    <string name="get_it_done_in_time">Terminez dans les temps!</string>-->
+<!--    <string name="settings">Paramètres</string>-->
+<!--    <string name="date">Date</string>-->
+<!--    <string name="time">Heure</string>-->
+<!--    <string name="description_optional">Description (optionnelle)</string>-->
+<!--    <string name="save_this_task">Enregistrer</string>-->
+<!--</resources>-->
+
 <resources>
-    <string name="app_name">Compte_à_Rebours</string>
-    <string name="hello_blank_fragment">Bonjour fragment vide</string>
-    <string name="set_a_timer">Définir un minuteur</string>
-    <string name="name_your_task">Nommez votre tâche...</string>
-    <string name="pick_a_color_for_it">Choisissez une couleur pour celle-ci...</string>
-    <string name="choose_a_format_for_the_countdown">Un format pour le compte à rebours...</string>
-    <string name="week">Sem</string>
-    <string name="day">Jour</string>
-    <string name="hour">Heure</string>
-    <string name="min">Min</string>
-    <string name="sec">Sec</string>
-    <string name="coming_soon">À venir...</string>
-    <string name="get_it_done_in_time">Terminez dans les temps!</string>
-    <string name="settings">Paramètres</string>
-    <string name="date">Date</string>
-    <string name="time">Heure</string>
-    <string name="description_optional">Description (optionnelle)</string>
-    <string name="save_this_task">Enregistrer</string>
-
-
+<string name="app_name">Deadline_Countdown</string>
+<string name="hello_blank_fragment">Hello blank fragment</string>
+<string name="set_a_timer">Set a timer</string>
+<string name="name_your_task">Name your task...</string>
+<string name="pick_a_color_for_it">Pick a color for it...</string>
+<string name="choose_a_format_for_the_countdown">Choose a format for the countdown...</string>
+<string name="week">Week</string>
+<string name="day">Day</string>
+<string name="hour">Hour</string>
+<string name="min">Min</string>
+<string name="sec">Sec</string>
+<string name="coming_soon">Coming soon...</string>
+<string name="get_it_done_in_time">Get it done in time!</string>
+<string name="settings">Settings</string>
+<string name="date">Date</string>
+<string name="time">Time</string>
+<string name="description_optional">Description (optional)</string>
+<string name="save_this_task">Save this task</string>
 </resources>
