Add onclickwidget and altered widget layout

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,7 +10,7 @@
     <string name="hour">Hour</string>
     <string name="min">Min</string>
     <string name="sec">Sec</string>
-    <string name="coming_soon">Coming soon...</string>
+    <string name="coming_soon">More coming soon...</string>
     <string name="get_it_done_in_time">Get it done in time!</string>
     <string name="settings">Settings</string>
     <string name="date">Date</string>
